Compiler/tests/good/Vectors/01_vectors.rs
fn main() {
    let p:Vec<i32> = vec![1,2,4];
    println!(p[2]);

    return;
}