Compiler/tests/bad/Output/06_output.rs
// Single line comment
fn main(){
  let x :Vec3<i32> = vec![34];

  println!(x);
  return;
}
